static popover width, all svg wrapped fixed div

--- a/pyrene-graphs/src/components/BarChartTable/barChartTable.css
+++ b/pyrene-graphs/src/components/BarChartTable/barChartTable.css
@@ -28,7 +28,6 @@
 }
 
 .popOverContainer {
-  width: 448px;
   padding: 24px 0 24px 24px;
 }
 
